<resources>
    <string name="app_name">Login_app</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Password</string>
    <string name="ingrese_su_correo">Ingrese su correo</string>
    <string name="ingrese_contrase_a">Ingrese contraseña</string>
    <string name="creaar_cuenta">Crear Cuenta</string>
    <string name="iniciar_sesi_nn">Iniciar Sesión</string>
    <string name="_vamos_a_crearte">¡Hola, vamos a crearte una cuenta!</string>
    <string name="volver_a_la_pantalla_de_inicio">Volver a la pantalla de inicio.</string>
</resources>