<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/poli"
    tools:context=".LoginFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_margen_izq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25171" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_margen_Derecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_botones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.60" />




    <View
        android:id="@+id/view_circulo_dos"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="80dp"
        android:alpha="0.8"
        android:background="@drawable/circle"
        android:transformPivotX="302dp"
        android:translationY="-53dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />



    <View
        android:id="@+id/view_circulo_tres"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginLeft="4dp"
        android:alpha="0.5"
        android:background="@drawable/circle"
        android:transformPivotX="146dp"
        android:translationY="-75dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <View
        android:id="@+id/view_circulooo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:alpha="0.5"
        android:background="@drawable/circle"
        android:transformPivotX="80dp"
        android:translationY="-75dp"
        tools:layout_editor_absoluteX="183dp"
        tools:layout_editor_absoluteY="-2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <View
        android:id="@+id/view_circulo_cuatro"
        android:layout_width="170dp"
        android:layout_height="140dp"
        android:layout_marginLeft="56dp"
        android:layout_marginTop="72dp"
        android:alpha="0.6"
        android:background="@drawable/circle"
        android:translationX="146dp"
        android:translationY="-87dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view_circulo_cinco"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="144dp"
        android:alpha="0.9"
        android:background="@drawable/circle"
        android:translationX="66dp"
        android:translationY="-100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/view_circulo_seis"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="144dp"
        android:alpha="0.9"
        android:background="@drawable/circle"
        android:translationX="-166dp"
        android:translationY="-100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <View
        android:id="@+id/view_circulo_siete"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginStart="144dp"
        android:alpha="0.9"
        android:background="@drawable/circle"
        android:translationX="-66dp"
        android:translationY="-100dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titulo_bienvenida"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="680dp"
        android:text="@string/_vamos_a_crearte"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/texto_email2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/e_mail"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/guide_email" />

    <TextView
        android:id="@+id/texto_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/guide_password" />

    <EditText
        android:id="@+id/edit_email2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_email"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/ingrese_su_correo"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/texto_email2"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edit_password2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/round_bg"
        android:drawableStart="@drawable/ic_lock"
        android:drawablePadding="8dp"
        android:ems="10"
        android:hint="@string/ingrese_contrase_a"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/texto_password2"
        android:autofillHints="" />



    <Button
        android:id="@+id/button_crear_cuenta2"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/round_border"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/creaar_cuenta"
        android:textColor="@color/poli"
        android:textSize="18sp"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/edit_password2" />



    <Button
        android:id="@+id/button_second"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_border"
        android:paddingStart="16dp"
        android:paddingTop="12dp"
        android:paddingEnd="16dp"
        android:paddingBottom="12dp"
        android:text="@string/volver_a_la_pantalla_de_inicio"
        android:textColor="@color/poli"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/guide_margen_izq"
        app:layout_constraintRight_toLeftOf="@id/guide_margen_Derecho"
        app:layout_constraintTop_toBottomOf="@id/button_crear_cuenta2" />


</androidx.constraintlayout.widget.ConstraintLayout>